issue #11 update for RPi3 build.

--- a/cross-compiler/Dockerfile
+++ b/cross-compiler/Dockerfile
@@ -1,17 +1,3 @@
-FROM library/debian@sha256:125f346eac7055d8e1de1b036b1bd39781be5bad3d36417c109729d71af0cd73 AS sysroot
-RUN apt update \
-  && apt install -y \
-    xz-utils \
-    curl \
-  && apt clean \
-  && rm -rf /var/lib/apt/lists/* \
-  && mkdir /tmp/sysroot \
-  && curl -L https://downloads.raspberrypi.org/raspios_lite_armhf/archive/2022-01-28-13:51/root.tar.xz \
-         -o /tmp/sysroot/root.tar.xz \
-  && cd /tmp/sysroot \
-  && tar xvJf root.tar.xz ./usr/lib ./usr/include \
-  && rm root.tar.xz
-
 FROM library/debian@sha256:125f346eac7055d8e1de1b036b1bd39781be5bad3d36417c109729d71af0cd73 AS ldc
 RUN apt update \
   && apt install -y \
@@ -48,7 +34,7 @@ WORKDIR /home/ldc
 RUN . ./dlang/ldc-1.28.1/activate \
   && CC=arm-linux-gnueabihf-gcc ldc-build-runtime \
     --ninja \
-    --dFlags="-w;-mtriple=arm-linux-gnueabihf;-mcpu=arm1176jzf-s" \
+    --dFlags="-w;-mtriple=arm-linux-gnueabihf" \
     --targetSystem="Linux;UNIX" \
   && mkdir /tmp/druntime \
   && cp ./ldc-build-runtime.tmp/lib/* /tmp/druntime \
@@ -56,22 +42,7 @@ RUN . ./dlang/ldc-1.28.1/activate \
 
 FROM ldc
 
-COPY --from=sysroot --chown=ldc:ldc /tmp/sysroot ./sysroot
 COPY --from=druntime --chown=ldc:ldc /tmp/druntime ./druntime
 
-RUN echo ". ~/dlang/ldc-1.28.1/activate" >> ~/.bashrc \
-  && mkdir ./pilife
-
-WORKDIR /home/ldc/pilife
-
-COPY --chown=ldc:ldc dub.json dub.json
-COPY --chown=ldc:ldc dub.selections.json dub.selections.json
-COPY --chown=ldc:ldc ldc-arm.sh ldc-arm.sh
-RUN mkdir ./source \
-  && echo "void main() {}" > ./source/app.d \
-  && . ~/dlang/ldc-1.28.1/activate \
-  && dub build --compiler=./ldc-arm.sh
-
-COPY --chown=ldc:ldc source source
-
+RUN echo ". ~/dlang/ldc-1.28.1/activate" >> ~/.bashrc
 
