--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,5 @@ services:
     volumes:
       - type: bind
         source: .
-        target: /home/ldc/pilife/dist
-    command: bash -c ". ~/dlang/ldc-1.28.1/activate && dub build --compiler=./ldc-arm.sh && cp pilife ./dist"
+        target: /home/ldc/pilife
 
